[package]
name = "https"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.35.1"
rustls-acme = { version = "0.8.1", features = ["axum"] }
log = { version = "0.4.20", features = [] }
axum-server = { version = "0.5", features = ["tls-rustls"]}
axum = "0.6.20"
tokio-stream = "0.1.14"