[package]
name = "mail_server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = {workspace=true}
serde = {workspace = true}
serde_json = {workspace = true}
mailin-embedded = "0.8.1"
mailin = "0.6.3"
chrono = { workspace = true }
futures = "0.3.28"
mail-parser = "0.8.2"
uuid = { version = "1.3.3", features = ["v4"] }
http-body = "0.4.5"
anyhow = { workspace = true }
reqwest = { version = "0.11.18", features = ["json"] }
log = "0.4.20"
