[package]
name = "py_tpl"
version = "0.1.0"
edition = "2021"


[features]
debug=[]
use_embed_python=[]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared={path="../shared"}

pyo3 = { version = "0.20.0" }
async-trait = "0.1.75"
async-channel = "2.1.1"
tracing = "0.1"
include_dir = "0.7.3"
lazy_static = "1.4.0"
zip-extract = "0.1.2"
serde_json = "1.0.108"