[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[features]
dev=[]
prod=[]

utils=["zip-extract", "sqlparser"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
reqwest = { version = "0.11.22", features = ["json"] }
anyhow = "1.0.75"
async-trait = "0.1.75"

# for server
zip-extract = { version = "0.1.2", optional = true }

proc_macros={path= "../proc_macros", optional = true}
sqlparser = { version = "0.40.0", optional = true }