[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[features]
dev=[]
prod=[]

utils=["zip-extract", "sqlparser"]

[dependencies]
serde = {workspace = true}
serde_json = {workspace = true}
reqwest = { workspace=true }
anyhow = { workspace=true }
async-trait = {workspace=true}
async-channel = {workspace=true}
# for server
zip-extract = { version = "0.1.2", optional = true }

proc_macros={path= "../proc_macros", optional = true}
sqlparser = { version = "0.40.0", optional = true }
include_dir = "0.7.3"
chrono = {workspace=true}