[package]
name = "play-dylib-abi"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {workspace = true}
anyhow= {workspace = true}
serde_urlencoded = "0.7.1"
serde_json = {workspace = true}
reqwest = {workspace = true}
toml = { version = "0.8.19"}

[dev-dependencies]
tokio={workspace = true}
