[package]
name = "play-dylib-abi"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = {workspace = true}
anyhow= {workspace = true}
serde_urlencoded = { workspace = true }
serde_json = {workspace = true}
reqwest = {workspace = true}
toml = { workspace = true }

[dev-dependencies]
tokio={workspace = true}
