[package]
name = "play-dylib-loader"
version = "0.1.0"
edition = "2024"

[features]
hot-reloading=[]

[dependencies]
libloading = { workspace = true }
tokio = {workspace = true}
play-dylib-abi={workspace = true}
anyhow={workspace = true}
log = {workspace = true}
serde_json = {workspace = true}
tempfile = { workspace = true }
dashmap = { workspace = true }