[package]
name = "curl-helper"
version = "0.1.0"
edition = "2021"

[package.metadata.play-gui]
display-name = "Curl Helper"
description = "Manage, organize, and run curl commands in a desktop client"

[lib]
path = "src/lib.rs"

[[bin]]
name = "curl-helper"
path = "src/main.rs"

[dependencies]
eframe = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }
rfd = "0.15"
